--- a/libs/client/pages/space/teacher/students/src/lib/containers/empty/empty.component.html
+++ b/libs/client/pages/space/teacher/students/src/lib/containers/empty/empty.component.html
@@ -1,3 +1,7 @@
-<div>Select a student</div>
-<div>OR</div>
-<div><a routerLink="./add">Add a student</a></div>
+<div class="flex flex-col items-center">
+  <div>Select a student</div>
+  <div>OR</div>
+  <div>
+    <a routerLink="./add" mat-raised-button color="primary">Add a student</a>
+  </div>
+</div>
