--- a/libs/client/pages/space/teacher/students/src/lib/components/student-list/student-list.component.html
+++ b/libs/client/pages/space/teacher/students/src/lib/components/student-list/student-list.component.html
@@ -1,7 +1,12 @@
-<klassroom-space-teacher-students-student-item
-  *ngFor="let item of items"
-  [id]="item.id"
-  [firstname]="item.firstname"
-  [lastname]="item.lastname"
-  [sex]="item.sex"
-></klassroom-space-teacher-students-student-item>
+<div *ngIf="items.length > 0; else emptyTpl">
+  <klassroom-space-teacher-students-student-item
+    *ngFor="let item of items"
+    [id]="item.id"
+    [firstname]="item.firstname"
+    [lastname]="item.lastname"
+    [sex]="item.sex"
+  ></klassroom-space-teacher-students-student-item>
+</div>
+<ng-template #emptyTpl>
+  <div class="flex h-full justify-center items-center p-4">No students</div>
+</ng-template>
