--- a/libs/client/pages/space/teacher/students/src/lib/containers/list/list.component.html
+++ b/libs/client/pages/space/teacher/students/src/lib/containers/list/list.component.html
@@ -1,3 +1,3 @@
 <klassroom-space-teacher-students-student-list
-  [items]="students"
+  [items]="(students$ | async)!"
 ></klassroom-space-teacher-students-student-list>
